[gd_scene load_steps=4 format=3 uid="uid://dt6cvnsp14qp5"]

[ext_resource type="Theme" uid="uid://du2pqa4sphe8i" path="res://Resources/Themes/StandardTheme.tres" id="1_jwmw7"]
[ext_resource type="PackedScene" uid="uid://codwbw3x5wsxb" path="res://Components/LabelManagement/manage_labels.tscn" id="2_ahxb0"]
[ext_resource type="Script" path="res://Components/Settings/settings.gd" id="2_tyh1d"]

[node name="Settings" type="Control" groups=["Settings"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jwmw7")
script = ExtResource("2_tyh1d")

[node name="BackGroundRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0745098, 0.0941176, 0.0941176, 1)

[node name="SettingsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -83.5
offset_right = 142.0
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="SettingsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "SettingsLabel"
horizontal_alignment = 1

[node name="ThemeContainer" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2
alignment = 1

[node name="ThemeLabel" type="Label" parent="SettingsContainer/ThemeContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "ThemeLabel"

[node name="ThemeButton" type="OptionButton" parent="SettingsContainer/ThemeContainer"]
layout_mode = 2
size_flags_horizontal = 4
item_count = 2
selected = 0
popup/item_0/text = "DarkLabel"
popup/item_0/id = 0
popup/item_1/text = "LightLabel"
popup/item_1/id = 1

[node name="DiaryContainer" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2
alignment = 1

[node name="DiaryLabel" type="Label" parent="SettingsContainer/DiaryContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "DiaryLabel"

[node name="DiaryButton" type="OptionButton" parent="SettingsContainer/DiaryContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
item_count = 2
selected = 0
fit_to_longest_item = false
popup/item_0/text = "DiaryNormal"
popup/item_0/id = 0
popup/item_1/text = "DiaryCompact"
popup/item_1/id = 1

[node name="LanguageContainer" type="HBoxContainer" parent="SettingsContainer"]
layout_mode = 2
alignment = 1

[node name="LanguageLabel" type="Label" parent="SettingsContainer/LanguageContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "LanguageName"

[node name="LanguageButton" type="OptionButton" parent="SettingsContainer/LanguageContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "EnglishName"
popup/item_0/id = 0
popup/item_1/text = "DutchName"
popup/item_1/id = 1

[node name="LabelsButton" type="Button" parent="SettingsContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "ManageLabel"

[node name="ManageLabels" parent="." instance=ExtResource("2_ahxb0")]
visible = false
layout_mode = 1

[connection signal="item_selected" from="SettingsContainer/ThemeContainer/ThemeButton" to="." method="_on_theme_button_item_selected"]
[connection signal="item_selected" from="SettingsContainer/DiaryContainer/DiaryButton" to="." method="_on_diary_button_item_selected"]
[connection signal="item_selected" from="SettingsContainer/LanguageContainer/LanguageButton" to="." method="_on_language_button_item_selected"]
[connection signal="pressed" from="SettingsContainer/LabelsButton" to="." method="_on_labels_button_pressed"]
